gh-4299 Fix NoSuchElementEx in UserDaoImpl.getBySubjectId